# sanki-enhanced

./: .gitignore  ROADMAP.md  build-tui.sh  main.cpp  sanki.pro
.github/workflows/: build.yml
all/: global.h
cardView/: deckPlay.cpp  deckPlay.h  modeOptions.cpp  modeOptions.h  modeOptions.ui
cardView/buttons/: fourOptions.cpp  fourOptions.h  fourOptionsNFlashy.cpp  fourOptionsNFlashy.h
cardView/functions/: helperFunctions.cpp  helperFunctions.h
cardView/modes/: completlyRandom.cpp
cardView/modes/boxes/: boxes.cpp
cardView/modes/sm2/: sm2.cpp  sm2.h  sm2options.cpp  sm2options.h  sm2options.ui
components/other/: cardBrowser.cpp  cardBrowser.h  cardBrowser.ui  cardEditor.cpp  cardEditor.h  cardEditor.ui
components/settings/: settingsMenu.cpp  settingsMenu.h  settingsMenu.ui
mainMenu/sessions/: session.cpp  session.h  session.ui  sessionStruct.cpp
packaging/arch/: PKGBUILD  sanki-ci.pub
tui/: CMakeLists.txt  global.h  tui_app.cpp  tui_app.h  tui_card_browser.cpp  tui_card_browser.h  tui_card_editor.cpp  tui_card_editor.h  tui_card_utils.cpp  tui_card_utils.h  tui_global.cpp  tui_main.cpp  tui_menu.cpp  tui_menu.h  tui_modes.cpp  tui_modes.h  tui_session_create.cpp  tui_session_create.h  tui_settings.cpp  tui_settings.h  tui_study.cpp  tui_study.h  tui_utils.cpp  tui_utils.h
